Add node restriction to gitignore / Refactor package.json and add mocha dependancy test

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
 # IntellJ
-.idea
+.idea/
 *.yml
 *.xml
 
 # Test File
-test.*
+test/*.js
 
 # log file
 *.log
@@ -15,3 +15,7 @@ test.*
 # anothers restrict
 .git
 
+# node
+package-lock.json
+.node_modules/
+node_modules/
