Add gitignore - node_module, config/*.json

--- a/.gitignore
+++ b/.gitignore
@@ -5,9 +5,15 @@
 
 # Test File
 test.*
+config/*.json
 
 # log file
 *.log
 
 # webDriver
 #webDriver/
+
+# node
+package-lock.json
+.node_modules/
+node_modules/
