Add - minimal configuration for Opera webDriver

--- a/config/configuration.json
+++ b/config/configuration.json
@@ -24,8 +24,9 @@
             "logLevel":"ALL"
 		},
 		"opera":{
-			"argv":[],
-			"bin":null
+			"argv":["--whitelisted-ips"],
+			"bin":"c:\\nasm\\operadriver",
+			"logLevel":null
 		},
 		"msedge":{
 			"argv":[],
