Refactoring - wrong include path

--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@ test/*.js
 
 # log file & config
 *.log
-config/*.json
+#config/*.json
 
 # webDriver
 #webDriver/
@@ -20,3 +20,6 @@ config/*.json
 package-lock.json
 .node_modules/
 node_modules/
+
+# perso
+main.js
