--- a/package.json
+++ b/package.json
@@ -20,5 +20,9 @@
   },
   "bin": {
     "webdriver-js-devgnode": "./bin/Webdriver-js-devgnode.js"
-  }
+  },
+
+  "engineStrict" : true,
+  "engines" : { "node" : ">= 12.14.1" },
+  "homepage": "https://github.com/devGnode/SeleniumJs.git#readme"
 }
