--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,6 @@ test/*.js
 
 # log file & config
 *.log
-#config/*.json
 
 # webDriver
 #webDriver/
@@ -23,3 +22,6 @@ node_modules/
 
 # perso
 main.js
+
+# jenkins
+jenkinsfile*
