--- a/package.json
+++ b/package.json
@@ -16,13 +16,15 @@
   },
   "license": "ISC",
   "devDependencies": {
-    "mocha": "*"
+    "mocha": "*",
+    "uuid": "^3.4.0"
   },
   "bin": {
     "webdriver-js-devgnode": "./bin/Webdriver-js-devgnode.js"
   },
-
-  "engineStrict" : true,
-  "engines" : { "node" : ">= 12.14.1" },
+  "engineStrict": true,
+  "engines": {
+    "node": ">= 12.14.1"
+  },
   "homepage": "https://github.com/devGnode/SeleniumJs.git#readme"
 }
